# basic-auth-decorator

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
basic_auth_decorator/: basic_auth.py
django_basic_auth/: basic_auth.py
