[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-basic-auth-decorator"
requires-python = ">=3"
authors = [{ name = "basic_auth", email = "pradish@sandbox.com.np" }]
description = "Basic auth decorator for Django Ninja."
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]


[project.urls]
Homepage = "https://github.com/sandbox-pokhara/django-basic-auth-decorator"
Issues = "https://github.com/sandbox-pokhara/django-basic-auth-decorator/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"django_basic_auth_decorator" = "django_basic_auth_decorator"

[tool.setuptools.dynamic]
version = { attr = "django_basic_auth_decorator.__version__" }
dependencies = { file = "requirements.txt" }

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true
enable-unstable-feature = ["string_processing"]

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["django_basic_auth_decorator", "test.py"]
typeCheckingMode = "strict"
